mobile layout, fixed container sizing and overflow

--- a/card.css
+++ b/card.css
@@ -125,44 +125,54 @@
 		display: grid;
 		justify-content: center;
 		align-content: center;
-		min-width: 300px;
-	  min-height: 400px;
+		min-width: 250px;
+	  min-height: 500px;
 	}
 	.card{
-		grid-template-columns: 300px;
-		grid-template-rows: 150px 200px;
-		min-width: 300px;
-    min-height: 500px;
+		grid-template-columns: 200px;
+		grid-template-rows: 100px 250px;
+		min-width: 250px;
+    min-height: 400px;
 	}
 	.product-image{
 		background-image: url('images/image-product-mobile.jpg');
 		border-top-left-radius: 1rem;
 		border-top-right-radius: 1rem;
 		border-bottom-left-radius: 0rem;
+		min-width: 250px;
+		min-height: 100px;
+	}
+	.product-text{
+		min-width: 250px;
+		min-height: 300px;
+		padding: 1rem;
 	}
 
 	
 	.product-type{
-		font-size: .8rem;
-		margin-top: .5rem;
-		margin-bottom: .5rem;
+		font-size: .6rem;
+		margin-top: .25rem;
+		margin-bottom: .25rem;
 	}
 	.product-title{
-		font-size: 1.5rem;
-		margin-top: .5rem;
-		margin-bottom: .5rem;
+		font-size: 1.2rem;
+		margin-top: .25rem;
+		margin-bottom: .25rem;
 	}
 	.product-description{
-		font-size: 1rem;
-		margin-top: .5rem;
-		margin-bottom: .5rem;
+		font-size: .8rem;
+		margin-top: .25rem;
+		margin-bottom: .25rem;
+		padding: 0 0 0 0;
 	}
 	.prices{
-		margin-top: .5rem;
-		margin-bottom: .5rem;
+		font-size: 1rem;
+		margin-top: .25rem;
+		margin-bottom: .25rem;
 	}
 	.button{
-		margin-top: .5rem;
-		margin-bottom: .5rem;
+		font-size: 1rem;
+		margin-top: .25rem;
+		margin-bottom: .25rem;
 	}
 }
